--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "sample",
+  "name": "soloreact",
   "version": "1.0.0",
-  "description": "npm install",
-  "main": "index.js",
+  "description": "",
+  "main": "routes",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "concurrently": "^5.3.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server" : "nodemon server.js"
+    "server": "nodemon server.js",
+    "front": "cd front && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run front\""
   },
   "author": "",
   "license": "ISC"
